add pastcuts writeup

--- a/index.html
+++ b/index.html
@@ -74,7 +74,9 @@ body {
     &nbsp;
     &nbsp;
 
-    <small>library for short2butter and butter2short pouring</a></small>
+    <p><center><button onclick="window.location.href = 'https://0xilis.github.io/blog/jb/pastcuts-writeup';">Pastcuts</button></p>
+
+    <small>How to create Pastcuts</a></small>
     <p><center><button onclick="window.location.href = 'https://0xilis.github.io/repo';">Pastcuts</button></p>
 
     <small>Jailbreak tweak to import iOS 15 shortcuts on iOS 13/14</a></small>
