--- a/jb/pastcuts-writeup.html
+++ b/jb/pastcuts-writeup.html
@@ -30,6 +30,11 @@ a {
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
 }
+.mypfp {
+    border-radius:100px;
+    max-width: 10%;
+    max-width: 10%;
+}
 body {
     font-family: Arial, Helvetica, sans-serif;
 }
@@ -52,10 +57,13 @@ body {
     color: royalblue;
     background-position: 0 100%;
 }
+.site-nav-link {
+    color: white;
+}
 </style>
 </head>
 <body>
-    <nav class="site-nav">Snoolie's Blog<a class="githublink" href="https://github.com/0xilis">‎ ‎ GitHub</a></a></nav>
+    <nav class="site-nav"><a href="https://0xilis.github.io/blog" class="site-home-link"><img src="https://avatars.githubusercontent.com/u/109871561?v=4" class="mypfp"></img>Snoolie's Blog</a><a class="githublink" href="https://github.com/0xilis">‎ ‎ GitHub</a></a></nav>
     &nbsp;
     <h1 id="pastcuts">Pastcuts</h1>
 <h3 id="creating-pastcuts-1-0">Creating Pastcuts 1.0</h3>
