--- a/index.html
+++ b/index.html
@@ -58,6 +58,18 @@ body {
     color: royalblue;
     background-position: 0 100%;
 }
+.button {
+  background-color: #4CAF50;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+}
 </style>
 </head>
 <body>
@@ -74,13 +86,13 @@ body {
     &nbsp;
     &nbsp;
 
-    <p><center><button onclick="window.location.href = 'https://0xilis.github.io/blog/jb/pastcuts-writeup';">Pastcuts</button></p>
+    <p><center><button class="button" onclick="window.location.href = 'https://0xilis.github.io/blog/jb/pastcuts-writeup';">Pastcuts</button></p>
 
     <small>How to create Pastcuts</a></small>
-    <p><center><button onclick="window.location.href = 'https://0xilis.github.io/repo';">Pastcuts</button></p>
+    <p><center><button class="button" onclick="window.location.href = 'https://0xilis.github.io/repo';">Pastcuts</button></p>
 
     <small>Jailbreak tweak to import iOS 15 shortcuts on iOS 13/14</a></small>
-    <p><center><button onclick="window.location.href = 'https://0xilis.github.io/blog/shortcuts';">Deep Into Shortcuts</button></p>
+    <p><center><button class="button" onclick="window.location.href = 'https://0xilis.github.io/blog/shortcuts';">Deep Into Shortcuts</button></p>
 
     <small>Section of blog dedicated to the Shortcuts application.</a></small>
 </body>
