--- a/jb/pastcuts-writeup.html
+++ b/jb/pastcuts-writeup.html
@@ -12,12 +12,9 @@ a {
   }
 }
 @media (prefers-color-scheme: light) {
-    /*
-    light mode. not used atm but just in case i want to ever add a light mode to my site
-    */
   body {
-    background-color: black;
-    color: lightgreen;
+    background-color: white;
+    color: black;
   }
 }
 
@@ -31,7 +28,7 @@ a {
     font-weight: bold;
 }
 .mypfp {
-    border-radius:100px;
+    border-radius:80px;
     max-width: 10%;
     max-width: 10%;
 }
@@ -67,7 +64,7 @@ body {
     &nbsp;
     <h1 id="pastcuts">Pastcuts</h1>
 <h3 id="creating-pastcuts-1-0">Creating Pastcuts 1.0</h3>
-<p>So we need to figure out what we need to hook beforehand. Back when shortcuts were shared as unsigned .shortcut files, I remember you could pull a shortcut file (which is just a plist) and modify it to have a lower WFWorkflowMinimumClientVersion, and boom import. Even if importing has been disabled, those unsigned shortcut files are still in use behind the scenes when importing shortcuts from iCloud in iOS 13/14 (you can even call the icloud API to receive the unsigned file if you want, ex links like these <code>https://www.icloud.com/shortcuts/8d4e206d568d4aadb624b2a6191a3771</code> have this API <code>https://www.icloud.com/shortcuts/api/records/8d4e206d568d4aadb624b2a6191a3771</code> in which contain a link to the signed shortcut for iOS 15+ and unsigned for iOS 14-), so that value must be in use somewhere. Shortcuts on iOS 13+ differs greatly behind the scenes from iOS 12-, with a lot of it being in iOS itself rather than the app - more specifically, ContentKit.framework, ActionKit.framework, and (the most important) WorkflowKit.framework. First let&#39;s understand what we need to hook. Thankfully shortcuts has a built-in action that makes this easy for us: View Content Graph of (x). Make a shortcut to get all shortcuts, choose list action, then view content graph. Run and choose a shortcut, and View Content graph should appear. Tap on the shortcut&#39;s name, then Shortcut. We can see 5 items - WFWorkflowReference, Shortcut, WFImage, WFWorkflowRecord, and NSString. We&#39;re going to modify WFWorkflowRecord. Let&#39;s take a look at the header - <a href="https://headers.cynder.me/index.php?sdk=ios/13.7&amp;fw=/PrivateFrameworks/WorkflowKit.framework&amp;file=%2FHeaders%2FWFWorkflowRecord.h">https://headers.cynder.me/index.php?sdk=ios/13.7&amp;fw=/PrivateFrameworks/WorkflowKit.framework&amp;file=%2FHeaders%2FWFWorkflowRecord.h</a>. Oooo, NSString *minimumClientVersion - that sounds useful! Just hook minimumClientVersion in WFWorkflowRecord, and make it return NSString of 1. Boom - You just created Pastcuts 1.0!</p>
+<p>So we need to figure out what we need to hook beforehand. Back when shortcuts were shared as unsigned .shortcut files, I remember you could pull a shortcut file (which is just a plist) and modify it to have a lower WFWorkflowMinimumClientVersion, and boom import. Even if importing has been disabled, those unsigned shortcut files are still in use behind the scenes when importing shortcuts from iCloud in iOS 13/14 (you can even call the icloud API to receive the unsigned file if you want, ex links like these <code>https://www.icloud.com/shortcuts/8d4e206d568d4aadb624b2a6191a3771</code> have this API <code>https://www.icloud.com/shortcuts/api/records/8d4e206d568d4aadb624b2a6191a3771</code> in which contain a link to the signed shortcut for iOS 15+ and unsigned for iOS 14-), so that value must be in use somewhere. Shortcuts on iOS 13+ differs greatly behind the scenes from iOS 12-, with a lot of it being in iOS itself rather than the app - more specifically, ContentKit.framework, ActionKit.framework, and (the most important) WorkflowKit.framework. First let&#39;s understand what we need to hook. Thankfully shortcuts has a built-in action that makes this easy for us: View Content Graph of (x). Make a shortcut to get all shortcuts, choose list action, then view content graph. Run and choose a shortcut, and View Content graph should appear. Tap on the shortcut&#39;s name, then Shortcut. We can see 5 items - WFWorkflowReference, Shortcut, WFImage, WFWorkflowRecord, and NSString. We&#39;re going to modify WFWorkflowRecord. Let&#39;s take a look at the header - <a class="githublink" href="https://headers.cynder.me/index.php?sdk=ios/13.7&amp;fw=/PrivateFrameworks/WorkflowKit.framework&amp;file=%2FHeaders%2FWFWorkflowRecord.h">https://headers.cynder.me/index.php?sdk=ios/13.7&amp;fw=/PrivateFrameworks/WorkflowKit.framework&amp;file=%2FHeaders%2FWFWorkflowRecord.h</a>. Oooo, NSString *minimumClientVersion - that sounds useful! Just hook minimumClientVersion in WFWorkflowRecord, and make it return NSString of 1. Boom - You just created Pastcuts 1.0!</p>
 <h3 id="pastcuts-1-1-2-">Pastcuts 1.1.2+</h3>
 <p>Okay, so, what&#39;s wrong here? Well, in 1.2 I wanted Pastcuts to convert shortcut actions when importing. I realized that my logic was bad. Why? Well, we&#39;re hooking minimumClientVersion in EVERY shortcut loaded. This might be bad for performance / battery, and while we&#39;re not doing anything that can go wrong that much, once we get to hooking actions, if we make one mistake, not just that shortcut gets affected but EVERY shortcut gets affected, so it&#39;s pretty dangerous as well. So, let&#39;s just switch to hooking (also in WorkflowKit) WFSharedShortcut&#39;s workflowRecord instead. Let&#39;s do id rettype = %orig;. Then, [rettype setMinimumClientVersion:@&quot;1&quot;]; to make minimumClientVersion 1 in it. Then just return rettype, and boom, now we only hook when a shortcut is imported, making us MUCH more optimized! I was planning on waiting for Pastcuts 1.2, but I decided this optimization is enough to deserve a quick 1.1.2 release.</p>
 <h3 id="pastcuts-1-2-starting-to-get-good-we-re-actually-converting-actions-">Pastcuts 1.2 (starting to get good - we&#39;re actually converting actions)!</h3>
