--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@ a {
     light mode. not used atm but just in case i want to ever add a light mode to my site
     */
   body {
-    background-color: black;
-    color: lightgreen;
+    background-color: white;
+    color: black;
   }
 }
 
@@ -60,7 +60,7 @@ body {
 }
 .button {
   background-color: #4CAF50;
-  border: none;
+  border-radius:20px;
   color: white;
   padding: 15px 32px;
   text-align: center;
