--- a/jb/pastcuts-writeup.html
+++ b/jb/pastcuts-writeup.html
@@ -60,7 +60,7 @@ body {
 </style>
 </head>
 <body>
-    <nav class="site-nav"><a href="https://0xilis.github.io/blog" class="site-home-link"><img src="https://avatars.githubusercontent.com/u/109871561?v=4" class="mypfp"></img>Snoolie's Blog</a><a class="githublink" href="https://github.com/0xilis">‎ ‎ GitHub</a></a></nav>
+    <nav class="site-nav"><img src="https://avatars.githubusercontent.com/u/109871561?v=4" class="mypfp"></img><a href="https://0xilis.github.io/blog" class="site-home-link">Snoolie's Blog</a><a class="githublink" href="https://github.com/0xilis">‎ ‎ GitHub</a></a></nav>
     &nbsp;
     <h1 id="pastcuts">Pastcuts</h1>
 <h3 id="creating-pastcuts-1-0">Creating Pastcuts 1.0</h3>
