--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ body {
     <center><img class="mypfp" src="https://avatars.githubusercontent.com/u/109871561?v=4">
     <h1>Snoolie K</h1>
     <p><strong>iOS Programmer.</strong></center></p>
-    <p><center>Hello! Welcome to my site. I mainly program in Objective-C / C, and have knowledge of PHP/JS/Python along with a <i>tiny</i> bit of knowledge of some other languages ex C++, Java, and x86 assembly. I am currently learning Java. Check out some of my projects below:</center></p>
+    <p><center>Hello! Welcome to my site. I mainly program in Objective-C / C, and have knowledge of JS/Python along with a <i>tiny</i> bit of knowledge of some other languages ex PHP and arm64 assembly. Check out some of my projects below:</center></p>
 
     &nbsp;
     &nbsp;
